# fuse3-p7zip

./: .clang-format  .editorconfig  .gitignore  .gitmodules  .local.vimrc  .tidyallrc  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  build  cpanfile
.github/workflows/: cmake.yml
cmake/: FindFUSE.cmake  FindFUSE3.cmake  version.hpp.in
example/: archive.7z  password-kde  password-pass
include/: 7zip.hpp  exception.hpp  library.hpp  pattern.hpp  string.hpp
packaging/arch/: PKGBUILD
src/: exception.cpp  fuse3.cpp  library.cpp  logger.cpp  main.cpp  string.cpp
src/7zip/: Archive.cpp  ArchiveExtractor.cpp  Format.cpp  Library.cpp  Method.cpp  ReadStream.cpp  WriteStream.cpp  com.cpp
src/include/: 7zip-impl.hpp  com.hpp  fuse3.hpp  library-impl.hpp  logger.hpp
t/: tidy
tools/: setup-hooks
tools/git-hooks/: pre-commit
